--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/marked": "^6.0.0",
     "framer-motion": "^12.23.24",
+    "marked": "^16.4.1",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
